[package]
name = "slashtime"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
csv = "1.3"
chrono = "0.4"
chrono-tz = "0.8"
crossterm = "0.27"
dirs = "5.0"
glib = "*"
gdk = { version = "*", package = "gdk4" }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"]  }
iana-time-zone = "*"
serde = { version = "1.0", features = ["derive"] }
tz-rs = "0.6"
